fix JEI compat 2: electric boogaloo